objects/UPC_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>UPC_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Origin__c</fullName>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>WARNING</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPC_Origin__c</columns>
        <columns>UPC_Type__c</columns>
        <columns>UPC_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERR-{00000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>